package keijumt.design_pattern.pattern.iterator

interface Aggregate {
    fun iterator(): Iterator
}